2006-02-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Command.pm: When lchown is available, chowname_hr should affect links.
	There's no lchown in perl, so we system() it.

2006-02-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: get_aptdb was stomping on $_, which happened to be
	a Package object. Damn global variables...

2006-02-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Add methods to check whether the bindist is available, based
	on the current distribution and prefix.
	* Engine.pm, PkgVersion.pm, Configure.pm: Replace existing checks for
	bindist availability with calls to the new methods in Config. Now if we
	want to allow UseBinaryDist for private dists, there's just one place to
	change.
	* Config.pm: Don't write the bindist entries to sources.list unless the
	bindist is actually available.

2006-02-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: If buildlock is in an unfamiliar environment, allow
	removal. This can occur when injecting a new fink.

2006-02-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: A bit of cleanup on the termination of process().

2006-02-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: process() stashes its @ARGV in Config options.
	restart_as_root() uses this instead of a passed @ARGV list, and
	does its own check for whether it is already root.

2006-02-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Engine.pm: Change buildlock removal process. Now we check
	if any buildlocks appear stale before trying to remove them, so we don't
	make many redundant calls to dpkg.

2006-02-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Use the gcc build number for the revision if
	possible; also make sure tests are using /usr/bin/gcc rather than
	some random gcc in the path (should speed things up a little if
	ccache or distcc are hanging around)

2006-02-23  Daniel Macks  <dmacks@netspace.org>
